--- a/resume.html
+++ b/resume.html
@@ -9,39 +9,37 @@
 </head>
 <body>
 <div id='container'><div id='contact'><p>
-<a href="https://raw.github.com/mwhite/resume/master/resume.md">Markdown</a> -&gt; <a href="https://raw.github.com/mwhite/resume/master/resume.pdf">PDF</a>, <a href="http://mwhite.github.com/resume">HTML</a>, and more
+93 Kensington Road
 </p><p>
-<a href="http://github.com/mwhite/resume"><code class="url">http://github.com/mwhite/resume</code></a>
+Bronxville, New York 10708
+</p><p>
+914-844-8671
+</p><p>
+wmccarthy.com
 </p></div>
 <div>
-<h1 id="markdown-resumé">Markdown Resumé</h1>
-<h2 id="interests">Interests</h2>
-<ul>
-<li>Creating beautiful resumés from simple Markdown documents</li>
-</ul>
+<h1 id="william-mccarthy">William McCarthy</h1>
 <h2 id="work-experience">Work Experience</h2>
 <ul>
-<li><p><strong>Word Processor</strong> (Redmond, WA)</p>
-<p>Junior Resumé Maker, 2006 - 2007</p>
+<li><p><strong>Strategic Value Partners</strong> (Greenwich, CT)</p>
+<p>Risk Manager / Desk Quant, July 2011 - Present</p>
 <ul>
 <li>Intermingled presentation and content</li>
 <li>Styling was a pain, so either didn't do it or found a half-decent template and didn't mess with it</li>
-</ul></li>
-<li><p><strong>LaTeX + pdflatex</strong></p>
-<p>Senior Resumé Maker, 2008 - 2010</p>
+</ul>
+<p>Head of Application Development, July 2007 - July 2011</p>
 <ul>
 <li>Edited verbose LaTeX documents in a text editor</li>
 <li>Mixed content and presentation to achieve pixel-perfection</li>
 <li>Installed and configured the unusual TeX setups required by the best-looking LaTeX resumés</li>
-</ul></li>
-<li><p><strong>LinkedIn, StackOverflow Careers, vizualize.me, etc</strong></p>
-<p>Web Resumé Intern, August 2010</p>
+</ul>
+<p>Project Manager, November 2005 - July 2007</p>
 <ul>
 <li>Entered data, adapting to different data models and formatting limitations</li>
 <li>Attempted to customize PDF exports and remove default resumé elements, to no avail</li>
 </ul></li>
-<li><p><strong>Markdown with Pandoc</strong></p>
-<p>Resumé Architect, February 2011 - present</p>
+<li><p><strong>Resurgence Asset Management / M.D. Sass Investor Services</strong> (White Plains, NY)</p>
+<p>Planning &amp; Development Manager, April 2003 - November 2005</p>
 <ul>
 <li>Write in one format (Markdown), convert to many formats (PDF, HTML, ODT, DOCX, and more)</li>
 <li>Style HTML output with CSS and PDF output with a custom LaTeX header</li>
@@ -52,13 +50,12 @@
 </ul>
 <h2 id="education">Education</h2>
 <ul>
-<li><p><strong>Github University</strong> (World Wide Web)</p>
-<p>B.S. in Submodules, May 2012</p></li>
+<li><p><strong>Tufts University</strong> (Medford, MA)</p>
+<p>B.A. in Economics, March 2002</p></li>
 </ul>
-<h2 id="skills">Skills</h2>
+<h2 id="technical-skills">Technical Skills</h2>
 <ul>
-<li><p>Very experienced with Python, Markdown, LaTeX</p></li>
-<li><p>Familiar with GNU Make, bash</p></li>
+<li>Python, C#, SQL Server, MongoDB, Excel VBA, FinCAD, Bloomberg (terminal and api), LaTeX, powershell</li>
 </ul>
 </div>
 
